Fix for Bug #18413  Data usage for varsize columns are not correctly reported to mysqld